--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.1",
+    "firebase": "^9.9.4",
     "framer-motion": "^7.3.2",
     "number-counter": "^1.0.3",
     "react": "^18.2.0",
