--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,9 +39,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.9",
     "@emailjs/browser": "^3.6.2",
     "aos": "^2.3.4",
+    "autoprefixer": "^10.4.9",
     "postcss": "^8.4.16",
     "react-countup": "^6.3.0",
     "react-icons": "^4.4.0",
