--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-modal-video": "^1.2.10",
     "react-parallax": "^3.5.1",
     "sass": "^1.54.4",
+    "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   }
 }
